# Gxsm4

./: CODE_OF_CONDUCT.md  HACKING  NEWS  README  README.md  autogen.sh  configure.ac  docuscangxsm4plugins.pl  gxsm4.pc  meson.build  meson.options  org.gnome.desktop.gxsm4.gschema.xml  org.gnome.gxsm4.json  org.gnome.gxsm4.yml  pypi-dependencies.json
core-source/: Makefile.am  app_channelselector.cpp  app_channelselector.h  app_monitor.C  app_monitorcontrol.C  app_monitorcontrol.cpp  app_monitorcontrol.h  app_profile.C  app_profile.cpp  app_profile.h  app_spm.C  app_spm.cpp  app_v3dcontrol.cpp  app_v3dcontrol.h  app_view.C  app_view.cpp  app_view.h  app_vinfo.C  app_vinfo.cpp  app_vinfo.h  app_vobj.cpp  app_vobj.h  app_vpdata_view.h  cairo_item.cpp  cairo_item.h  caps.hpp  clip.c  clip.h  common.hpp  csv.cpp  csv.hpp  dataio.C  dataio.cpp  dataio.h  dt400curve10.h  epsfutils.cpp  epsfutils.h  error.cpp  gapp_service.C  gapp_service.cpp  (+103 more)
core-source/css/: styles.css
gxsm-wm-extension/: extension.js  meson.build  stylesheet.css
palette/: Makefile.am  SQDM-pal-flip.pnm  SQDM-pal.pnm  bluepal2.pnm  cm-RdBuGnYl.pnm  cm-d.pnm  deepsea.pnm  fullsatspectrumpal.pnm  greydeepsea.pnm  greyhilight.pnm  greyhilightx.pnm  meson.build  omicronpal.pnm  parula-step-cm.pnm  parula.pnm  profile_colors_reverse.xcolor  redyellow.pnm  romanflagpal.pnm  xxsmpalette.pnm
plug-ins/common/: PanView.cpp  PanView.h  PlugInClass.doc  ProbeIndicator.cpp  ProbeIndicator.h  editnc.C  extra_scan_info.cpp  gxsm-scan-image-viewer-sok-client.py  gxsm-scan-remote-client.py  gxsm-sok-server.py  listplugins.C  meson.build  mkicons.C  org.gnome.gxsm4.pcs.plugin-libpyremote.gschema.xml  org.gnome.gxsm4.pcsadjustments.plugin-libpyremote.gschema.xml  printer.C  printer.cpp  pyremote.C  pyremote.cpp  pyremote.h  pyscript_templates.h
plug-ins/common/pyremote-gxsm-lib-script-collection/: gxsm3-lib-scan.py  gxsm3-lib-utils.py  job-gvp.py  job-probes.py  sf10.py  sf12.py  sf3.py  sf4.py  vp-gvp-initial.py
plug-ins/control/: CCDControl.cpp  DSPControl.C  DSPMover.C  DSPPeakFind.C  Makefile.am  NanoPlott.C  app_databox.h  app_focus.C  app_focus.cpp  app_peakfind.C  app_probe.C  app_probe.h  gtkledbar.c  inet_json_external_scandata.C  inet_json_external_scandata.cpp  inet_json_external_scandata.h  meson.build  multidim_movie_control.C  multidim_movie_control.cpp  nano_manipulator.C  org.gnome.gxsm4.inet_json_settings.gschema.xml  org.gnome.gxsm4.pcs.plugin-libinet-json-external-scandata.gschema.xml  org.gnome.gxsm4.pcsadjustments.plugin-libinet-json-external-scandata.gschema.xml  peakfind_scan.C  probe_scan.h  resonance_fit.h  rhk_scancontrol.C  rhk_scancontrol.cpp  spm_scancontrol.C  spm_scancontrol.cpp  spm_scancontrol.h
plug-ins/hard/: json_talk.cpp  json_talk.h  meson.build  message  org.gnome.gxsm4.hwi.rpspmc-control.gschema.xml  org.gnome.gxsm4.hwi.rpspmc-gvpmover.gschema.xml  org.gnome.gxsm4.hwi.spm-template-control.gschema.xml  org.gnome.gxsm4.hwi.sranger_mk23.gschema.xml  org.gnome.gxsm4.hwi.sranger_mk23_mover.gschema.xml  org.gnome.gxsm4.pcs.plugin-librpspmc-pacpll.gschema.xml  org.gnome.gxsm4.pcs.plugin-libspm-simulator-hwi.gschema.xml  org.gnome.gxsm4.pcs.plugin-libspm-template-hwi.gschema.xml  org.gnome.gxsm4.pcs.plugin-libsranger-mk2-hwi.gschema.xml  org.gnome.gxsm4.pcsadjustments.plugin-librpspmc-gvpmover.gschema.xml  org.gnome.gxsm4.pcsadjustments.plugin-librpspmc-pacpll.gschema.xml  org.gnome.gxsm4.pcsadjustments.plugin-libspm-template-hwi.gschema.xml  org.gnome.gxsm4.pcsadjustments.plugin-libsranger-mk2-hwi.gschema.xml  org.gnome.gxsm4.plugin_libsranger_hwi.gschema.xml  org.gnome.gxsm4.rpspmc-pacpll-settings.gschema.xml  rpspmc.cpp  rpspmc_control.cpp  rpspmc_control.h  rpspmc_conversions.h  rpspmc_gvpmover.cpp  rpspmc_gvpmover.h  rpspmc_hwi_dev.cpp  rpspmc_hwi_dev.h  rpspmc_hwi_eventhandling.cpp  rpspmc_hwi_structs.h  rpspmc_hwi_vectorgen.cpp  rpspmc_pacpll.cpp  rpspmc_pacpll.h  rpspmc_pacpll_json_data.cpp  rpspmc_pacpll_json_data.h  rpspmc_signals.cpp  rpspmc_stream.cpp  rpspmc_stream.h  spm_dev_data.h  spm_simulator_hwi.C  spm_simulator_hwi.cpp  (+31 more)
plug-ins/hard/CreatecHVC/: CryoBox2InfluxDB.py  createc_hvc-demo.py  createc_hvc.py  meterwidget.py  rpspmc_tune.py
plug-ins/hard/MK2-A810_spmcontrol/: FB_spm_dataexchange.h  FB_spm_lnk.cmd  FB_spm_lnk_A16.cmd  FB_spm_magic.asm  FB_spm_offsetmove.c  FB_spm_probe.c  Makefile-A810  README  ReadWrite_GPIO.h  SignalRangerMK2.mem  dataprocess.h  dsp_clock.asm  mul32.h  record.asm  spm_log.asm  sr2_analog810driver.lib  vectors_A16.asm
plug-ins/hard/MK3-A810_spmcontrol/: FB_spm.c  FB_spm_areascan.c  FB_spm_statemaschine.h  FB_spm_task_names.h  FB_spmcontrol-DEFAULT.out  FB_spmcontrol-MIN-PAC-NOROT.out  FB_spmcontrol.map  MK3--PowerUpKernelData.txt  PAC_pll.h  ReadWrite_GPIO.h  SR3PRO_A810Driver-interruptible-no-kernel-int.lib  (+9 more)
plug-ins/scan/: Makefile.am  PsiHDF_im_export.C  PsiHDF_im_export.cpp  UK2k_import.C  WSxM_header.cpp  WSxM_header.h  WSxM_io.C  WSxM_io.cpp  ascii_data_im_export.C  ascii_data_im_export.cpp  batch.h  bin_import.C  bin_import.cpp  converter.C  converter.cpp  converter.h  cube_import.C  cube_import.cpp  external_converter.C  external_converter.cpp  external_converter.h  fileio.c  g_dat_types.h  gmeyer_im_export.cpp  meson.build  nanoimport.C  nanoimport.cpp  omicron_io.C  png_im_export.C  png_im_export.cpp  primitiveimexport.C  primitiveimexport.cpp  psihdf.h  quicktime_im_export.C  quicktime_im_export.cpp  rhk_spm32_import.C  rhk_spm32_import.cpp  sdfimport.C  spa4_d2d_im_export.C  spa4_d2d_im_export.cpp  (+4 more)
thumbnailers/: Makefile.am  meson.build  nc4topng.cpp  nctopng.cpp  t.sh  thumbpal.h
thumbnailers/test-data/: Au111-R1_186-M-Xp-ZSmTopo.nc  Au111-R1_186-Xm-Current.nc  Au111-R1_186-Xm-ZSmTopo.nc  Au111-R1_186-Xm-dFrequency.nc  Au111-R1_186-Xp-Current.nc  Au111-R1_186-Xp-Excitation.nc  Au111-R1_186-Xp-Phase.nc  Au111-R1_186-Xp-TimemMon.nc  Au111-R1_186-Xp-dFrequency.nc  Au111-R1_228-M-Xp-ZSmTopo.nc  README.md
trunk/Gxsm4/: AUTHORS  BUGS  Makefile.am  README  README.md  gxsm4.desktop  meson.build  org.gnome.gxsm4.json  remote-job.py
(+1120 files in other folders)
